terraform/ecs.tf
resource "aws_ecs_cluster" "stateless" {
  name = var.ecs_cluster_name
  capacity_providers = [
    "FARGATE",
    "FARGATE_SPOT",
  ]
  tags = {}

  setting {
    name  = "containerInsights"
    value = "disabled"
  }

}

resource "aws_ecs_task_definition" "task-definition-test" {
  family = var.ecs_task_definition_family
  container_definitions = templatefile("container-definitions.json.tmpl", {
    docker_image   = var.docker_image
    log_group_name = aws_cloudwatch_log_group.log_group.name
  })
  cpu                = "4096"
  execution_role_arn = aws_iam_role.execution_role.arn
  memory             = "8192"
  network_mode       = "awsvpc"
  requires_compatibilities = [
    "FARGATE",
  ]
  tags          = {}
  task_role_arn = aws_iam_role.task_role.arn
}

resource "aws_ecs_service" "service" {
  name                               = var.ecs_service_name
  cluster                            = aws_ecs_cluster.stateless.id
  deployment_maximum_percent         = 200
  deployment_minimum_healthy_percent = 100
  desired_count                      = 0
  enable_ecs_managed_tags            = false
  health_check_grace_period_seconds  = 0
  iam_role                           = "aws-service-role"
  #  #depends_on                         = ["aws-service-role"]
  launch_type = "FARGATE"

  platform_version    = "LATEST"
  scheduling_strategy = "REPLICA"
  tags                = {}
  task_definition     = aws_ecs_task_definition.task-definition-test.arn

  deployment_controller {
    type = "ECS"
  }

  network_configuration {
    assign_public_ip = true
    security_groups = [
      aws_security_group.simple.id,
    ]
    subnets = [
      aws_subnet.main.id,
    ]
  }

}

resource "aws_cloudwatch_log_group" "log_group" {
  name              = "/ecs/VideoConcat"
  retention_in_days = 0
  tags              = {}
}
